--- a/index.html
+++ b/index.html
@@ -510,6 +510,28 @@
             </div>
         </section>
 
+        <!-- About The Project -->
+        <section class="max-w-6xl mx-auto mb-32 px-4 reveal">
+            <div class="glass-panel p-8 md:p-10 rounded-3xl text-left border-l-4 border-yellow-400 hover:transform hover:-translate-y-1 transition-transform duration-300">
+                <h3 class="font-heading text-3xl font-bold mb-6 text-gray-900 dark:text-white">About The Project</h3>
+                <div class="space-y-4 text-gray-700 dark:text-gray-300 leading-relaxed text-lg">
+                    <p>
+                        Team Gelatofish is dedicated to bringing <strong>'Free Nitro'</strong> features to everyone through client modding. We centralize tools for animated avatars, banners, and decorations in one convenient place.
+                    </p>
+                    <p>
+                        We partner with volunteer-run Discord servers that help approve user requests. This approval process is critical to:
+                    </p>
+                    <ul class="list-disc list-inside space-y-2 ml-2">
+                        <li><strong>Prevent Copying:</strong> We respect intellectual property and do not allow the copying of official Discord assets to avoid legal issues.</li>
+                        <li><strong>Ensure Safety:</strong> We screen for inappropriate content to keep the ecosystem clean and safe for all users.</li>
+                    </ul>
+                    <p class="mt-4">
+                        Our goal is to make downloading and applying custom PFPs, banners, and decorations completely <strong>hassle-free and open source</strong> for the community.
+                    </p>
+                </div>
+            </div>
+        </section>
+
         <!-- Partners Section -->
         <section class="max-w-7xl mx-auto mb-20 reveal" aria-labelledby="partners-title">
             <div class="text-center mb-12">
